--- a/contents/relevant/userOriented.tex
+++ b/contents/relevant/userOriented.tex
@@ -1,32 +1,31 @@
-\subsection{Enfoque al usuario}
-Una gran parte del objetivo marcado en el apartado 3.1 Diseno, viene definido por el servicio que queramos ofrecerle
-al usuario, ya que este, es nuestro cliente final y al que pretendermos ayudar.\\
+\subsection{Focus on the user}
+A large part of the objective outlined in section 3.1, design, is defined by the service that we want to offer
+to the user, since this is our final client and to whom we intend to help. \\
 
 
-Tendremos que definir las necesidades que muestran los usuarios en combinacion con las carencias del mercado.
-Para ello tendremos que decidir si nuestro objetivo esta dirigido a un publico de gran dimension, por lo que tendremos que
-que identificar las necesidades homogeneas del usuario medio o si el objetivo esta enfocado a un tipo de usuario
-especifico, con necesidades caracteristicas.\\
+We must be aware of the needs that users show in combination with market deficiencies since
+It will help us to know what the demand or the hole that is not covered may be.
+Whether our target audience is unique, that is, take all types of users equally, considering the
+average user, as for a characteristic user, we should know the homogeneous characteristics of our group.
 
-Por lo tanto necesitamos un estudio actual sobre el nivel psicologico, social y economico del grupo objetivo, para descubrir, no solo
-las necesidades, pero tambien los deseos, que le gustaria tener y sus demandas, que quieren.
+Therefore we need a current study on the psychological, social and economic level of the target group, to discover, not only
+the needs, but also the wishes, that you would like to have and your demands, that you want.
 
-Una vez los usuarios tengan acceso a los datos tal y como se los proporcionamos, es importante tener una retroalimentacion, 
-seria ideal poder realizar un analisis del comportamiento del usuario para ve sus pautas respecto a los datos obtenidos.
-
+Once the users have access to the data as we provide them, it is important to have a feedback,
+It would be ideal to be able to perform an analysis of user behavior to see their guidelines regarding the data obtained.
 \subsubsection{How to solve it} 
-Es importante definir a que tipo de usuarios va dirigido. Estudiar tanto sus caracteristicas como la situacion del
-mercado.
-Utilizar un mecanismo que nos ayude a obtener una retroalimentacion, ya sea por un sistema de puntualizaciones, test o
-un mecanismo automatico que permita conocer el comportamiento del usuario. Tambien podremos optar por la combinacion de ambas 
-opciones.
+Define what type of users is intended. Study both its characteristics and the situation of the
+market.
+Use a mechanism that helps us obtain a feedback, either by a system of points, test or
+an automatic mechanism that allows knowing the behavior of the user. We can also choose the combination of both
+options
 
 \subsubsection{How we solve it. Aire Guru} 
-Aire Guru va dirigido a toda la poblacion, por lo que tendremos en cuenta a la hora de implementarlo que la informacion debe
-mostrarse de una forma simple, ademas de completa. Ademas, ponemos especial atencion a los usuarios que puedan tener una
-enfermedad o condicion medica influenciada por la polucion del aire.
-Durante el estudio de mercado, nos dimos cuenta, que muchas de ellas ofrecian la polucion del aire a tiempo real, pero 
-pudimos ver las siguientes carencias:
+Air Guru is aimed at the entire population, so we will take into account when implementing it that the information should
+show in a simple way, in addition to complete. In addition, we pay special attention to users who may have a
+disease or medical condition influenced by air pollution.
+During the market study, we realized that many of them offered air pollution in real time, but
+We could see the following deficiencies:
 \begin{itemize}
     \item Obsolete measurements. Measurements need to be taken regularly, since there can be huge differences
     between pollution levels at different times of the day.
@@ -39,12 +38,12 @@ pudimos ver las siguientes carencias:
     a lo largo del tiempo, no de forma puntual.
     \item Necesidad de utilizar complicated devices para monitorizar la exposicion. Nuestro objetivo es facilitar la informacion a los 
     usuarios con el minimo de complicaciones posibles.
-    \item Sin informacion dedicada por condicion medica. 
+    \item Sin informacion dedicada por condicion medica.
 \end{itemize}
 
-Una vez implementado, probamos la aplicacion con 14 usuarios. Nuestra herramienta integra Google Analytis que nos permite saber el 
-comportamiento de los usuarios, como a cuantas paginas acceden, a cuales y cuanto tiempo permanencen en ella. Ademas, finalizada la prueba,
-se realizo una encuesta para medir no solo el nivel de satisfaccion, pero tambien para comprobar la utilidad y si habia conseguido el objetivo.
+Once implemented, we tested the tool with 14 users. Our tool integrates Google Analytis that allows us to know the
+user behavior, how many pages they access, how long and how long they stay in it. Also, after the test,
+A survey was conducted to measure not only the level of satisfaction, but also to verify the utility and if it had achieved the objective.
 \begin{figure}[ht]
     \centering
    \subfigure[Aire Guru Form]
@@ -58,10 +57,10 @@ se realizo una encuesta para medir no solo el nivel de satisfaccion, pero tambie
  
 \elsparagraph{Evaluation}  
 \begin{itemize}
-    \done El estudio de mercado nos hizo ver con claridad las carencias que existen en las aplicaciones actuales.
-    \done La encuesta nos reporto valoraciones muy positivas respecto a la utilizacion, comprension e informacion reportada.
-    \done Usuarios nos comentaron que gracias a Aire Guru habian descubierto que tenian una condicion medica que se puede ver afectada por
-    la polucion del aire
+    \done The market study made us clearly see the shortcomings that exist in current applications.
+    \done The survey gave us very positive evaluations regarding the use, understanding and information reported.
+    \done Users were told that thanks to Aire Guru they had discovered that they had a medical condition that could be affected by
+         air pollution
 
 \end{itemize}
  
