Removed abstracts and content/image tables

--- a/chapter.tex
+++ b/chapter.tex
@@ -35,15 +35,20 @@
 \begin{keyword}
  Air Quality Index \sep Pollution \sep Monitoring \sep Visualization \sep Analysis \sep BigData
 \end{keyword}
-
-\begin{abstract}
+\begin{comment}
+ \begin{abstract}
 \input{contents/abstract} 
-\end{abstract}
+\end{abstract}   
+\end{comment}
+
 \end{frontmatter}
+
+\begin{comment}
 \newpage
 \tableofcontents
 \listoffigures
 \newpage
+\end{comment}
 \input{contents/introduction} 
 \input{contents/accessible} 
 \input{contents/relevant} 
